# husky_metapackages-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
husky_desktop/: CHANGELOG.rst  package.xml
husky_robot/: package.xml
rpm/: ros-indigo-husky-desktop.spec  ros-indigo-husky-robot.spec  template.spec
