<?xml version="1.0"?>
<package>
  <name>husky_desktop</name>
  <version>0.0.2</version>
  <description>The husky_desktop metapackage</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_viz</run_depend>
  <run_depend>husky_interactive_markers</run_depend>
  <run_depend>husky_simulator</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
