<?xml version="1.0"?>
<package>
  <name>husky_desktop</name>
  <version>0.0.3</version>
  <description>The husky_desktop metapackage</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend version_gte="0.0.3">husky_viz</run_depend>
  <run_depend >husky_interactive_markers</run_depend>
  <run_depend version_gte="0.0.2">husky_simulator</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
