<?xml version="1.0"?>
<package>
  <name>husky_desktop</name>
  <version>0.1.0</version>
  <description>Metapackage for Clearpath Husky A200 visualization software</description>
  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_viz</run_depend>
  <run_depend>husky_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
