<?xml version="1.0"?>
<package>
  <name>husky_robot</name>
  <version>0.1.0</version>
  <description>Metapackage for Clearpath Husky A200 robot software</description>
  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_bringup</run_depend>
  <run_depend>husky_navigation</run_depend>
  <run_depend>husky_base</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
